--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there is a 80% that the mean of the population is between: (172.14308590115726, 174.79024743217607)\n"
+      "there is a 80% that the mean of the population is between: (168.34046040448825, 178.59287292884508)\n"
      ]
     }
    ],
@@ -56,8 +56,10 @@
     "s = 4\n",
     "n = len(sample)\n",
     "\n",
-    "interval = stats.norm.interval(alpha=0.80, loc=mean, scale=s/np.sqrt(n)) # loc=sample mean \n",
-    "                                                                   # scale=standerror = s/sqrt(n)\n",
+    "interval = stats.norm.interval(alpha=0.80, loc=mean, scale=s) \n",
+    "# loc=sample mean \n",
+    "# hier is scale=s want s is hier al s van populatie \n",
+    "\n",
     "print('there is a 80% that the mean of the population is between:', interval)  "
    ]
   },
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -92,8 +94,8 @@
     "successes = 27 #losses is here the success\n",
     "n = 105\n",
     "\n",
-    "confid_80 = smp.proportion_confint(count=successes, nobs=n, alpha=0.20, method='normal') #confidence level of 80%\n",
-    "confid_90 = smp.proportion_confint(count=successes, nobs=n, alpha=0.10, method='normal') #confidence level of 90%\n",
+    "confid_80 = smp.proportion_confint(count=successes, nobs=n, alpha=0.20, method='normal') #alpha is hier 1-alpha\n",
+    "confid_90 = smp.proportion_confint(count=successes, nobs=n, alpha=0.10, method='normal') #alpha is hier 1-alpha\n",
     "\n",
     "print('confidence level of 80%:', confid_80)\n",
     "print('confidence level of 90%:', confid_90)"
@@ -111,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(187.59428443830478, 188.97893335496133)"
+       "(202.5104423773468, 273.44982722558115)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,10 +132,11 @@
     "# your code here\n",
     "sample = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
     "mean= sum(sample)/len(sample)\n",
-    "s = 4\n",
+    "s = 4 # s voor populatie ipv sample \n",
     "n = len(sample)\n",
     "\n",
-    "stats.chi2.interval(alpha=0.1, df=n, loc=mean, scale=s/np.sqrt(n)) "
+    "stats.chi2.interval(alpha=0.9, df=n, loc=mean, scale=s) \n",
+    "# hier is scale=s want s is hier al s van populatie "
    ]
   },
   {
@@ -152,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9.982981952607826, 10.017018047392174)"
+       "(9.380796021692403, 10.619203978307597)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +177,8 @@
     "n = len(acid)\n",
     "s = np.std(acid) # np function to calculate de stdev \n",
     "\n",
-    "stats.t.interval(alpha=0.05, df=n, loc=mean, scale=s) \n",
-    "# hier is scale=s want je wil het alleen weten voor de containers\n",
+    "stats.t.interval(alpha=0.95, df=n, loc=mean, scale=s) \n",
+    "# hier is scale=s want je wil het alleen weten voor de containers (de sample)\n",
     "# anders scale=s/sqrt(n) "
    ]
   },
