--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +51,18 @@
    "source": [
     "# standaard normaal verdeling test \n",
     "# your code here\n",
+    "'''\n",
+    "L.S. Good!\n",
+    "'''\n",
+    "\n",
     "sample = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
     "mean= sum(sample)/len(sample)\n",
     "s = 4\n",
     "n = len(sample)\n",
+    "\n",
+    "'''\n",
+    "L.S. Nice!\n",
+    "'''\n",
     "\n",
     "interval = stats.norm.interval(alpha=0.80, loc=mean, scale=s) \n",
     "# loc=sample mean \n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +99,11 @@
     "# binominale test\n",
     "# your code here\n",
     "import statsmodels.stats.proportion as smp\n",
+    "\n",
+    "'''\n",
+    "L.S. Well done!\n",
+    "'''\n",
+    "\n",
     "successes = 27 #losses is here the success\n",
     "n = 105\n",
     "\n",
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +135,7 @@
        "(202.5104423773468, 273.44982722558115)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,6 +143,10 @@
    "source": [
     "# chikwadraad test\n",
     "# your code here\n",
+    "'''\n",
+    "L.S. Good!\n",
+    "'''\n",
+    "\n",
     "sample = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
     "mean= sum(sample)/len(sample)\n",
     "s = 4 # s voor populatie ipv sample \n",
@@ -155,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +181,7 @@
        "(9.380796021692403, 10.619203978307597)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +189,10 @@
    "source": [
     "# t-test \n",
     "# your code here\n",
+    "'''\n",
+    "L.S. Correct!\n",
+    "'''\n",
+    "\n",
     "acid = [9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6]\n",
     "mean = sum(acid) / len(acid)\n",
     "n = len(acid)\n",
@@ -269,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
